<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_name">Crazy 8\'s Player</string>

    <!-- About Activity -->
    <string name="about_text">This 2-4 player game requires one Android tablet per game and one Android device per player, all of which should have Bluetooth capabilities.  The tablet will serve as the game board, and each of the player’s devices will contain their hands of cards.  The tablet will connect to each of the devices via Bluetooth, and it will handle all logic and communication between these devices.  

To use this application properly, download the application titled “Crazy Eights Game Board” to the tablet that will serve as the game host.  Once this has been done, first select Create Game from the Main Menu of the tablet, and then select Join Game from the Main Menu on each player’s device, including this one.  Players should then choose the host tablet from the connection list that will appear on their screens.  Press the Start button on the host tablet’s connection screen when all players have been connected in order to start the game.</string>

    <!-- Connect Screen Handheld -->
    <string name="connecting">Connecting&#8230;</string>
    <string name="waitingForGame">Waiting for game to begin&#8230;</string>

    <!-- Show Cards Activity -->
    <string name="Draw">Draw</string>

    <!-- Select Suit Activity -->
    <string name="selectsuit">Please select a suit</string>
    <string name="Spades">Spades</string>
    <string name="Hearts">Hearts</string>
    <string name="Clubs">Clubs</string>
    <string name="Diamonds">Diamonds</string>

    <!-- Pause Activity -->
    <string name="gamePaused">Paused</string>
    
    <!-- Disconnected Activity -->
    <string name="waiting">Waiting to reconnect&#8230;</string>

    <!-- Game Results -->
    <string name="winner">You Won!</string>
    <string name="loser">You Lost :(</string>
    
	<!-- Enter Name Activity -->
	<string name="enter_name">Please enter your name</string>
	<string name="ok">OK</string>
	<string name="enter_name_here">Enter your name here</string>

</resources>